Agrego funcionalidad CREATE a movies

--- a/Módulo 6/Manipulación de datos/moviesDigital/src/views/partials/header.ejs
+++ b/Módulo 6/Manipulación de datos/moviesDigital/src/views/partials/header.ejs
@@ -1,10 +1,19 @@
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/movies">Movies</a></li>
+
+    <li><a href="/movies">Movies</a>
+
+    <ul>
+      <li><a href="/create-movie">Agregar película</a></li>
+    </ul>
+
+    </li>
+    
     <li><a href="/movies/new">New Movies</a></li>
     <li><a href="/movies/recommended">New Recommended</a></li>
     <li><a href="/genres">Genres</a></li>
     <li><a href="/actors">Actors</a></li>
   </ul>
+  
 </nav>
