Subo módulos locales

--- a/Módulo 6/5. Manipulación de datos/src/views/actorsDetail.ejs
+++ b/Módulo 6/5. Manipulación de datos/src/views/actorsDetail.ejs
@@ -11,11 +11,10 @@
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>    
-    <h1><%= actor.first_name %> <%= actor.last_name %></h1>
+    <h1><%= actor.name %> </h1>
     <br>
-    <p>NAME: <%= actor.first_name %> </p>
-    <p>SURNAME: <%= actor.last_name %> </p>
-    <p>RATING:  <%= actor.rating %></p>
+    <p>FULL NAME: <%= actor.first_name %> <%= actor.last_name %> </p>
+    
 
 </body>
 </html>
