--- a/Módulo 6/6. Relaciones y CRUD/src/views/newestMovies.ejs
+++ b/Módulo 6/6. Relaciones y CRUD/src/views/newestMovies.ejs
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listado de Actores</title>
+    <title>Películas ordenas por fecha</title>
     <link rel='stylesheet' href='/css/style.css' />
-
 </head>
-
 <body>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
     </figure>
-
     <%- include("./partials/header") %>
-    
-    <h1>LISTADO DE ACTORES</h1>
+
+    <h1>PELÍCULAS ORDENADAS POR FECHA</h1>
     <ul>
-        <% for( let i = 0; i < actors.length; i++ ) { %>
+        <% for( let i = 0; i < movies.length; i++ ) { %>
         <li>
-            <a href="/actors/detail/<%= actors[i].id %>"><%= actors[i].first_name %> <%= actors[i].last_name %></a>
+            <a href="/movies/detail/<%=movies[i].id%>"><%= movies[i].title %> </a> <br>
+            <%= 'RELEASE DATE: ' + movies[i].release_date %> 
         </li>
         <% } %>
-
+        
     </ul>
 </body>
-
 </html>
