--- a/Módulo 6/6. Relaciones y CRUD/src/views/partials/header.ejs
+++ b/Módulo 6/6. Relaciones y CRUD/src/views/partials/header.ejs
@@ -10,5 +10,6 @@
   </ul>
   <ul>
     <li><a href="/movies/add">Add Movie</a></li>
+    <li><a href="/actors/add">Add Actor</a></li>
   </ul>
 </nav>
