--- a/Módulo 6/6. Relaciones y CRUD/src/views/genresList.ejs
+++ b/Módulo 6/6. Relaciones y CRUD/src/views/genresList.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listado de Actores</title>
+    <title>listado de Generos</title>
     <link rel='stylesheet' href='/css/style.css' />
 
 </head>
@@ -12,15 +12,12 @@
 <body>
     <figure>
         <img src="/img/logo-DH.png" alt="Logo Digital House">
-    </figure>
-
-    <%- include("./partials/header") %>
-    
-    <h1>LISTADO DE ACTORES</h1>
+      </figure>
+    <h1>LISTADO DE GENEROS</h1>
     <ul>
-        <% for( let i = 0; i < actors.length; i++ ) { %>
+        <% for( let i = 0; i < genres.length; i++ ) { %>
         <li>
-            <a href="/actors/detail/<%= actors[i].id %>"><%= actors[i].first_name %> <%= actors[i].last_name %></a>
+            <a href="/genres/detail/<%= genres[i].id %>"><%= genres[i].name %></a>
         </li>
         <% } %>
 
