--- a/Módulo 6/6. Relaciones y CRUD/src/views/moviesDetail.ejs
+++ b/Módulo 6/6. Relaciones y CRUD/src/views/moviesDetail.ejs
@@ -20,8 +20,14 @@
     <p>AWARDS: <%= movie.awards %> </p>
     <p>LENGTH: <%= movie.length + ' min'%> </p>
     <p>RELEASE DATE: <%= movie.release_date %> </p>
-
+    <% if(movie.genre){ %>
+    <p>GENRE: <%= movie.genre.name %> </p>
+    <% } else {%>
+        <p>GENRE: Sin género asignado</p><% } %>
     <a href="/movies/edit/<%= movie.id %>">Editar Pelicula</a>
     <a href="/movies/delete/<%= movie.id %>">Eliminar Pelicula</a>
+    <br>
+            <a  class="botonVolver" href="/movies">Volver al listado de Películas</a>
+
 </body>
 </html>
