--- a/Módulo 6/6. Relaciones y CRUD/src/views/moviesList.ejs
+++ b/Módulo 6/6. Relaciones y CRUD/src/views/moviesList.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listado de Actores</title>
+    <title>Listado de Películas</title>
     <link rel='stylesheet' href='/css/style.css' />
 
 </head>
@@ -16,11 +16,11 @@
 
     <%- include("./partials/header") %>
     
-    <h1>LISTADO DE ACTORES</h1>
+    <h1>LISTADO DE PELÍCULAS</h1>
     <ul>
-        <% for( let i = 0; i < actors.length; i++ ) { %>
+        <% for( let i = 0; i < movies.length; i++ ) { %>
         <li>
-            <a href="/actors/detail/<%= actors[i].id %>"><%= actors[i].first_name %> <%= actors[i].last_name %></a>
+            <a href="/movies/detail/<%= movies[i].id %>"><%= movies[i].title %></a>
         </li>
         <% } %>
 
