--- a/Módulo 6/6. Relaciones y CRUD/src/views/partials/header.ejs
+++ b/Módulo 6/6. Relaciones y CRUD/src/views/partials/header.ejs
@@ -9,7 +9,10 @@
  
   </ul>
   <ul>
+    <br>
+    <h4>ADMIN</h4>
     <li><a href="/movies/add">Add Movie</a></li>
     <li><a href="/actors/add">Add Actor</a></li>
   </ul>
+  <br>
 </nav>
